--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey_500">#757575</color>
+    <color name="grey_700">#616161</color>
+    <color name="amber_500">#FFC107</color>
+    <color name="amber_800">#FF8F00</color>
 </resources>
